[package]
name = "shva"
version = "0.1.1"
edition = "2024"
authors = ["Eldad Zack <eldad@fogrefinery.com>"]

[dependencies]
# Infra
serde = { version = "1", features = ["derive"] }
toml = "1.0"
anyhow = "1"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["trace"] }
tracing-opentelemetry = "0.32"

# Tokio to Axum and all that's in between.
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = { version = "0.5", features = ["limit", "load-shed", "timeout"] }
tower-http = { version = "0.6", features = [
  "trace",
  "compression-full",
  "validate-request",
] }
hyper = "1"

# Database
tokio-postgres = "0.7"
bb8 = "0.9"
bb8-postgres = "0.9"

## Functionality
rand = "0.10"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
utoipa = "5"
refinery = { version = "0.9", features = ["tokio-postgres"] }
ciborium = "0.2.0"
async-trait = "0.1.53"
mime = "0.3"
thiserror = "2"
http = "1"
